reformatted printing and split of method duties